[package]
name = "msedis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.logger]
path = "logger"

[dependencies.database]
path = "database"

[dependencies.networking]
path = "networking"

[dependencies.response]
path = "response"

[dependencies.parser]
path = "parser"

[dependencies.command]
path = "command"