[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net2 = {version = "0.2.2", features = ["nightly"]}

[dependencies.database]
path = "../database"

[dependencies.parser]
path = "../parser"

[dependencies.command]
path = "../command"
